force-app/main/default/objects/SchemaCustom__c/SchemaCustom__c.object-meta.xml
<CustomObject>
    <label>SchemaCustom</label>
    <nameField>
        <label>SchemaCustom Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SchemaCustoms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>