force-app/main/default/objects/SchemaCustom__c/fields/ProductCustom__c.field-meta.xml
<CustomField>
    <fullName>ProductCustom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductCustom</label>
    <referenceTo>ProductCustom__c</referenceTo>
    <relationshipLabel>SchemaCustoms</relationshipLabel>
    <relationshipName>SchemaCustoms</relationshipName>
    <type>Lookup</type>
</CustomField>