force-app/main/default/objects/SchemaCustom__c/fields/State_Date__c.field-meta.xml
<CustomField>
    <fullName>State_Date__c</fullName>
    <label>State Date</label>
    <type>Date</type>
</CustomField>