force-app/main/default/objects/SchemaCustom__c/fields/Svalue__c.field-meta.xml
<CustomField>
    <fullName>Svalue__c</fullName>
    <label>Svalue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>