force-app/main/default/objects/SchemaCustom__c/validationRules/InsertAccountCustomProductCustom.validationRule-meta.xml
<ValidationRule>
    <fullName>InsertAccountCustomProductCustom</fullName>
    <active>true</active>
    <errorConditionFormula>or(IsBlank( AccountCustom__c ),And(Isblank(  ProductCategory__c ),IsBlank( ProductCustom__c )),
And(not(Isblank(  ProductCategory__c )),Not(IsBlank( ProductCustom__c ))))</errorConditionFormula>
    <errorMessage>Select One of them (ProductCustom or ProductCategory )</errorMessage>
</ValidationRule>